syntax = "proto3";

package etherstate.etherstate;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "etherstate/etherstate/params.proto";
import "etherstate/etherstate/ethereum_address.proto";
import "etherstate/etherstate/ethereum_address_state.proto";

option go_package = "github.com/nelsonstr/o3n1/ether-state/x/etherstate/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ether-state/etherstate/params";
  
  }
  
  // Queries a list of EthereumAddress items.
  rpc EthereumAddress    (QueryGetEthereumAddressRequest) returns (QueryGetEthereumAddressResponse) {
    option (google.api.http).get = "/ether-state/etherstate/ethereum_address/{index}";
  
  }
  rpc EthereumAddressAll (QueryAllEthereumAddressRequest) returns (QueryAllEthereumAddressResponse) {
    option (google.api.http).get = "/ether-state/etherstate/ethereum_address";
  
  }
  
  // Queries a list of EthereumAddressState items.
  rpc EthereumAddressState    (QueryGetEthereumAddressStateRequest) returns (QueryGetEthereumAddressStateResponse) {
    option (google.api.http).get = "/o3n1/ether-state/etherstate/ethereum_address_state/{index}";
  
  }
  rpc EthereumAddressStateAll (QueryAllEthereumAddressStateRequest) returns (QueryAllEthereumAddressStateResponse) {
    option (google.api.http).get = "/o3n1/ether-state/etherstate/ethereum_address_state";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetEthereumAddressRequest {
  string index = 1;
}

message QueryGetEthereumAddressResponse {
  EthereumAddress ethereumAddress = 1 [(gogoproto.nullable) = false];
}

message QueryAllEthereumAddressRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllEthereumAddressResponse {
  repeated EthereumAddress                        ethereumAddress = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination      = 2;
}

message QueryGetEthereumAddressStateRequest {
  string index = 1;
}

message QueryGetEthereumAddressStateResponse {
  EthereumAddressState ethereumAddressState = 1 [(gogoproto.nullable) = false];
}

message QueryAllEthereumAddressStateRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllEthereumAddressStateResponse {
  repeated EthereumAddressState                   ethereumAddressState = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination           = 2;
}

